<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_level"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_name_level"
        app:layout_constraintTop_toTopOf="@+id/tv_name_level"
        android:layout_marginStart="16dp"
        android:text="@string/name_value"
        android:textStyle="bold"
        android:textColor="@color/grish" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_level"
        app:layout_constraintStart_toStartOf="@+id/tv_name_level"
        android:layout_marginTop="8dp"
        android:text="@string/email_level"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/grish"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_email_level"
        app:layout_constraintTop_toTopOf="@+id/tv_email_level" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_level"
        app:layout_constraintStart_toStartOf="@id/tv_email_level"
        android:layout_marginTop="8dp"
        android:text="@string/phone_level"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_phone_level"
        app:layout_constraintStart_toEndOf="@+id/tv_phone_level"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textColor="@color/grish" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sayHi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>